<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_NameAndFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText_name_and_family"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText_NationalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText_national_code"
            android:inputType="numberDecimal"
            android:maxLength="10" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editText_FatherCode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/button_FatherSelect"
                android:ems="10"
                android:hint="@string/editText_father_code"
                android:inputType="numberDecimal"
                android:maxLength="10" />

            <Button
                android:id="@+id/button_FatherSelect"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/button_select" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            >

            <EditText
                android:id="@+id/editText_MotherCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/button_MotherSelect"
                android:ems="10"
                android:hint="@string/editText_mother_code"
                android:inputType="numberDecimal"
                android:maxLength="10" />

            <Button
                android:id="@+id/button_MotherSelect"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/button_select" 
                android:layout_alignParentLeft="true" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_FamilyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_select_family" />

        <Spinner
            android:id="@+id/spinner_Bime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/editText_BimeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText_bime_number"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/checkBox_IsAlive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_is_alive" />

        <Button
            android:id="@+id/button_Ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_ok" />
    </LinearLayout>

</ScrollView>